unpackaged/objects/Monitored_Environments__c.object
<CustomObject>
	<fields>
		<fullName>Environment__c</fullName>
		<deleteConstraint>Restrict</deleteConstraint>
		<label>Environment</label>
		<referenceTo>copado__Environment__c</referenceTo>
		<relationshipLabel>Monitored Environments</relationshipLabel>
		<relationshipName>Monitored_Environments</relationshipName>
		<required>true</required>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>Last_Monitoring_Log__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Last Monitoring Log</label>
		<referenceTo>Monitoring_Log__c</referenceTo>
		<relationshipLabel>Monitored Environments</relationshipLabel>
		<relationshipName>Monitored_Environments</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>Last_Scan_Status__c</fullName>
		<label>Last Scan Status</label>
		<type>Picklist</type>
		<valueSet>
			<restricted>true</restricted>
			<valueSetDefinition>
				<value>
					<fullName>Not Scanned Yet</fullName>
					<default>true</default>
					<label>Not Scanned Yet</label>
				</value>
				<value>
					<fullName>Started</fullName>
				</value>
				<value>
					<fullName>Success</fullName>
				</value>
				<value>
					<fullName>Failed</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>Last_Successful_Scan__c</fullName>
		<label>Last Successful Scan</label>
		<type>DateTime</type>
	</fields>
	<fields>
		<fullName>Pipeline__c</fullName>
		<deleteConstraint>Restrict</deleteConstraint>
		<label>Pipeline</label>
		<referenceTo>copado__Deployment_Flow__c</referenceTo>
		<relationshipLabel>Monitored Environments</relationshipLabel>
		<relationshipName>Monitored_Environments</relationshipName>
		<required>true</required>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>Schedule__c</fullName>
		<label>Schedule</label>
		<required>true</required>
		<type>Picklist</type>
		<valueSet>
			<restricted>true</restricted>
			<valueSetDefinition>
				<value>
					<fullName>Unscheduled</fullName>
					<default>true</default>
					<label>Unscheduled</label>
				</value>
				<value>
					<fullName>Use Apex Job Schedule</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<label>Monitored Environment</label>
	<listViews>
		<fullName>All</fullName>
		<columns>NAME</columns>
		<columns>Pipeline__c</columns>
		<columns>Environment__c</columns>
		<columns>Schedule__c</columns>
		<columns>Last_Scan_Status__c</columns>
		<columns>Last_Monitoring_Log__c</columns>
		<columns>Last_Successful_Scan__c</columns>
		<filterScope>Everything</filterScope>
		<label>All</label>
	</listViews>
	<nameField>
		<displayFormat>A-{0000}</displayFormat>
		<label>Monitored Environments Name</label>
		<type>AutoNumber</type>
	</nameField>
	<pluralLabel>Monitored Environments</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
	<validationRules>
		<fullName>Ensure_a_Successful_Manual_Run</fullName>
		<active>true</active>
		<errorConditionFormula>ISPICKVAL (Schedule__c,&apos;Unscheduled&apos;) = false &amp;&amp; ISBLANK(Last_Successful_Scan__c)</errorConditionFormula>
		<errorMessage>Please run a successful Manual Scan before adding to the monitoring schedule.</errorMessage>
	</validationRules>
</CustomObject>